styles.css
.calculator {
    border: solid;
    width: 40%;
    background-color: #827E7C;
    padding-bottom: 10px;
}

.display {
    display: flex;
    border: solid;
    margin: 10px;
    height: 50px;
    align-items: center;
    padding-right: 10px;
    background-color: white;
    vertical-align: middle;
    justify-content: end;
    font-size: 30px;
}

button {
    flex: 1;
    height: 30px;
    padding: 0;
    border: solid black .5px;
}

button:hover {
    background-color: grey;
}

button:active {
    background-color: blue;
}

.row {
    display: flex;
    margin-left: 10px;
    margin-right: 10px;
}

#zero {
    flex: 2;
}

